--- a/templates/_case.html
+++ b/templates/_case.html
@@ -1,5 +1,21 @@
 <div class="case" data-case_number="{{ case.case_number }}">
-   <p><strong>Case number:</strong> {{ case.case_number }}</p>
-   <p><a href="/case/{{ case.case_number }}">Case detail</a></p>
+
+  <h2>{{ total_for_payments(case.payments) }} for {{ case.causes }}</h2>
+
+  <h3>Victim(s):</h3>
+   {% for victim in case.victims %}
+    <p>{{ victim.victim_1 }}</p>
+   {% endfor %}
+
+  <h3>Officers involved:</h3>
+   {% for officer in case.officers %}
+    <p>{{ officer.first }} {{ officer.last }} {% if officer.badge_number %}(badge: {{ officer.badge_number }}){% endif %}</p>
+   {% endfor %}
+
+   <ul class="case-details">
+     <li>Case number: {{ case.case_number }}</li>
+     <li>Incident date: {{ case.date_of_incident }}</li>
+     <li>Location: {{ case.address }}</li>
+   </ul>
 </div>
 
