add option for 'any' to neighborhoods and race dropdowns

--- a/templates/_search_form.html
+++ b/templates/_search_form.html
@@ -18,11 +18,11 @@
         </select>
       </div>
 
-      <div class="form-group">
+      <div class="form-group" style="float:right;">
         <label>Payment amount</label>
 
         <input name="total_payments" class="slider payment" data-slider-id='paymentAmount'
-          type="text" data-slider-min="0" data-slider-max="15000000" data-slider-step="10000" data-slider-value="[2000000,8000000]"/>
+          type="text" data-slider-min="0" data-slider-max="15000000" data-slider-step="10000" data-slider-value="[0,15000000]"/>
       </div>
 
       <div class="form-group">
