--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -1,6 +1,6 @@
 <div class="search-form">
   <div class="search-form-inner">
-    <form id="search-form">
+    <form id="case-search-form">
       <div class="form-group">
         <label>Neighborhood</label>
         <select name="neighborhood" class="chosen">
