--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,8 +1,10 @@
 {% extends '_base.html' %}
 
 {% block library_scripts %}
-<script src="{{ url_for('cpd_settlements.static', filename='vendor/jquery/dist/jquery.min.js') }}"></script>
-<script src="{{ url_for('cpd_settlements.static', filename='vendor/underscore/underscore-min.js') }}"></script>
-<script src="{{ url_for('cpd_settlements.static', filename='vendor/backbone/backbone-min.js') }}"></script>
+{{ JS.push('vendor/jquery/dist/jquery.js') }}
+{{ JS.push('vendor/underscore/underscore.js') }}
+{{ JS.push('vendor/backbone/backbone.js') }}
+{{ JS.render('js/libraries.min.js') }}
+
 <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
 {% endblock library_scripts %}
