avoid flash of 'cases' tab on the 'officers' search page

--- a/less/style.less
+++ b/less/style.less
@@ -81,6 +81,23 @@ Search Screen
   }
 }
 
+body.cases {
+  .officer-tab {
+    display: none;
+  }
+  .case-tab {
+    display: block;
+  }
+}
+body.officers {
+  .officer-tab {
+    display: block;
+  }
+  .case-tab {
+    display: none;
+  }
+}
+
 /* ==========================================================================
 Filters
 ========================================================================== */
