--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,18 @@ Search Screen
   font-weight: 400;
   line-height: 1.333;
 }
+body.cases .officer-tab {
+  display: none;
+}
+body.cases .case-tab {
+  display: block;
+}
+body.officers .officer-tab {
+  display: block;
+}
+body.officers .case-tab {
+  display: none;
+}
 /* ==========================================================================
 Filters
 ========================================================================== */
