--- a/templates/search.html
+++ b/templates/search.html
@@ -96,7 +96,7 @@
 </script>
 
 <script type="text/tmpl" id="case-search-statement-tmpl">
-<span class="clickable"><%= incidents %></span> incidents<% if ( neighborhood !== "" ) { %> near <span class="clickable"><%= neighborhood %></span><% } %>
+<span class="clickable"><%= incidents %></span> incidents<% if ( neighborhood !== "" && neighborhood !== "unknown" ) { %> near <span class="clickable"><%= neighborhood %></span><% } %>
 <% if (date_of_incident !== "") { %>from <span class="clickable"><%= date_of_incident %></span><% } %>
 resulted in payments totalling <span class="clickable">$<%= payments.formatMoney() %></span>
 <% if ( victim_1_race !== "" ) { %> where the victim's race was <span class="clickable"><%= victim_1_race %></span><% } %>
