--- a/templates/search.html
+++ b/templates/search.html
@@ -40,6 +40,7 @@
     <div class="col-xs-12">
       <h3>Results</h3>
       <div class="case-list-sort-container">
+        <label for="case-list-sort">Sort by:</label>
         <select id="case-list-sort" class="chosen" style="float: right">
           <option value="payment-high-low">Payment, high to low</option>
           <option value="payment-low-high">Payment, low to high</option>
