--- a/less/style.less
+++ b/less/style.less
@@ -235,7 +235,7 @@ Form Elements
   margin-left: 10px;
 }
 
-.chosen-container {
+.search-form .chosen-container {
   width:100%!important;
 }
 
@@ -273,6 +273,10 @@ Results
 }
 
 .case-list-sort-container {
-  width: 200px;
   margin: 16px 0;
+  label {
+    vertical-align: middle;
+    line-height: 26px;
+    margin-bottom: 0;
+  }
 }
