add site_path var to search template

--- a/templates/search.html
+++ b/templates/search.html
@@ -63,6 +63,7 @@
 {{ super() }}
 
 <script type="text/javascript">
+  var site_path = '{{ site_path }}';
   var cases_json = {{ cases_json|safe }};
 </script>
 
