--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,3 +233,300 @@ Results
   line-height: 26px;
   margin-bottom: 0;
 }
+/* ==========================================================================
+Results
+========================================================================== */
+#home {
+  background-color: #000;
+  /* 
+    Nav
+  */
+  /*
+    Containers
+  */
+  /*#desc h1 .redtext { 
+    color:#bd261d;
+  }*/
+  /*
+    Elements
+  */
+}
+#home h1,
+#home h2,
+#home h3,
+#home h4,
+#home h5,
+#home h6 {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 700;
+  color: #fff;
+}
+#home #cpd-scrolling {
+  background-color: #000;
+}
+#home .navbar {
+  display: none;
+}
+#home h1 {
+  font-weight: bold;
+  font-size: 40px;
+}
+#home h2 {
+  font-size: 20px;
+}
+#home a,
+#home a:visited {
+  text-decoration: none;
+  color: #2e639e;
+}
+#home a:hover {
+  text-decoration: underline;
+}
+#home .touchonly {
+  display: none;
+}
+#home html.touch .touchonly {
+  display: block;
+}
+#home .noselect * {
+  user-select: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+}
+#home .doselect * {
+  user-select: auto;
+  -webkit-user-select: auto;
+  -khtml-user-select: auto;
+  -moz-user-select: auto;
+  -o-user-select: auto;
+}
+#home .clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+#home .clearfix {
+  display: inline-block;
+}
+#home html[xmlns] .clearfix {
+  display: block;
+}
+#home * html .clearfix {
+  height: 1%;
+}
+#home #cpd-header {
+  position: fixed;
+  width: 100%;
+  z-index: 99999;
+}
+#home #cpd-headwrap {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border-bottom: 1px solid rgba(122, 122, 122, 0.5);
+  line-height: 0;
+}
+#home #cpd-logo {
+  display: inline-block;
+  border-right: 1px solid rgba(122, 122, 122, 0.5);
+  margin-right: 1em;
+  line-height: 0;
+}
+#home #cpd-logo img {
+  display: block;
+  line-height: 0;
+}
+#home #cpd-title {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  display: inline-block;
+  line-height: 0;
+  font-weight: bold;
+  font-size: 1.35em;
+  vertical-align: top;
+  padding: 1.6em 0 0 0;
+}
+#home #cpd-progress {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  z-index: 9999999;
+}
+#home #cpd-progress svg {
+  display: block;
+  min-width: 100%;
+}
+#home #cpd-progress rect {
+  height: 16px;
+  fill: #bd261d;
+  /*fill:#000;*/
+}
+#home #desc {
+  width: 100%;
+  margin-top: 61px;
+  /*height of header*/
+  padding: 0 20%;
+  text-align: center;
+  position: absolute;
+  z-index: 2;
+}
+#home #desc h1 {
+  font-size: 6em;
+  text-transform: uppercase;
+  line-height: 1;
+  margin-top: 2em;
+  margin-bottom: 0;
+  text-shadow: 0px 0px 30px #000000;
+}
+#home #desc h1 .settling {
+  font-size: 1.25em;
+  letter-spacing: .03em;
+}
+#home #desc h1 .for {
+  display: block;
+  text-transform: lowercase;
+  font-weight: 300;
+  font-size: .5em;
+}
+#home #desc h1 .too {
+  font-size: 1.25em;
+}
+#home #desc h1 .much {
+  font-size: 1.25em;
+}
+#home #desc h2 {
+  font-weight: 300;
+  line-height: 1;
+  font-size: 2.25em;
+}
+#home .block {
+  width: 100%;
+  text-align: center;
+  z-index: 2;
+  position: absolute;
+}
+#home .block h3 {
+  font-size: 4em;
+  line-height: 1;
+  margin-top: 2em;
+  margin-bottom: 0;
+  padding: 0 20%;
+  text-shadow: 0px 0px 30px #000000;
+}
+#home section.slide {
+  width: 100%;
+  min-height: 100vh;
+  max-height: 100vh;
+  position: relative;
+}
+#home section.slide .fixed {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+}
+#home section#slide-intro .img {
+  background-image: url("../images/112414_FergusonReaction-2.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+#home section#slide-1 {
+  background-size: cover;
+  background-position: center center;
+}
+#home section#slide-2 .img {
+  background-image: url("../images/IMG_9158.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+#home section#slide-3 .img {
+  background-image: url("../images/jg_closures_protest_15.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  opacity: 0;
+}
+#home section#slide-4 {
+  background-image: url("../images/112414_EricGarnerProtestDay2-50.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+}
+#home section#slide-5 {
+  background-image: url("../images/112414_FergusonReaction-2.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+}
+#home section#slide-6 {
+  background-image: url("../images/jg_closures_protest_15.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+}
+#home .overlay {
+  background-color: #000;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  bottom: 0;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,1+100 */
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#000000', GradientType=0);
+  /* IE6-9 */
+}
+#home .spacer {
+  text-align: center;
+  min-height: 100px;
+}
+#home .spacer.s0 {
+  min-height: 1px;
+}
+#home .spacer.s1 {
+  min-height: 100px;
+}
+#home .spacer.s2 {
+  min-height: 200px;
+}
+#home .spacer.s3 {
+  min-height: 300px;
+}
+#home .spacer.s4 {
+  min-height: 400px;
+}
+#home .spacer.s5 {
+  min-height: 500px;
+}
+#home .spacer.s6 {
+  min-height: 600px;
+}
+#home .spacer.s7 {
+  min-height: 700px;
+}
+#home .spacer.s8 {
+  min-height: 800px;
+}
+#home .spacer.s9 {
+  min-height: 900px;
+}
+#home .spacer.s10 {
+  min-height: 1000px;
+}
+@media screen and (max-width: 760px) {
+  #home .block h3 {
+    font-size: 2em;
+    margin-top: 2em;
+  }
+}
