--- a/less/style.less
+++ b/less/style.less
@@ -280,3 +280,312 @@ Results
     margin-bottom: 0;
   }
 }
+
+
+/* ==========================================================================
+Results
+========================================================================== */
+#home {
+
+  background-color: #000;
+
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight: 700;
+    color:#fff;
+  }
+
+  #cpd-scrolling {
+    background-color: #000;
+  }
+
+  .navbar {
+    display:none;
+  }
+
+  h1 {
+    font-weight: bold;
+    font-size: 40px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  a, a:visited {
+    text-decoration: none;
+    color: #2e639e;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  .touchonly {
+    display: none;
+  }
+  html.touch .touchonly {
+    display: block;
+  }
+  .noselect * {
+    user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+  }
+  .doselect * {
+    user-select: auto;
+    -webkit-user-select: auto;
+    -khtml-user-select: auto;
+    -moz-user-select: auto;
+    -o-user-select: auto;
+  }
+
+  .clearfix:after {
+      content: ".";
+      display: block;
+      clear: both;
+      visibility: hidden;
+      line-height: 0;
+      height: 0;
+  }
+
+  .clearfix {
+      display: inline-block;
+  }
+
+  html[xmlns] .clearfix {
+      display: block;
+  }
+
+  * html .clearfix {
+      height: 1%;
+  }
+
+  /* 
+    Nav
+  */
+  #cpd-header {
+    position:fixed;
+    width:100%;
+    z-index:99999;
+  }
+  #cpd-headwrap {
+    background-color:rgba(0,0,0,.5);
+    color:#fff;
+    border-bottom:1px solid rgba(122,122,122,.5);
+    line-height: 0;
+  }
+  #cpd-logo {
+    display:inline-block;
+    border-right:1px solid rgba(122,122,122,.5);
+    margin-right:1em;
+      line-height: 0;
+  }
+  #cpd-logo img {
+    display:block;
+    line-height: 0;
+  }
+  #cpd-title {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight: 700;
+    text-transform:uppercase;
+    display:inline-block;
+    line-height: 0;
+    font-weight:bold;
+    font-size:1.35em;
+    vertical-align: top;
+      padding: 1.6em 0 0 0;
+  }
+  #cpd-progress {
+    width:100%;
+    position: fixed;
+      bottom: 0;
+      z-index: 9999999;
+  }
+  #cpd-progress svg {
+    display:block;
+    min-width:100%;
+  }
+  #cpd-progress rect {
+    height:16px;
+    fill:#bd261d;
+    /*fill:#000;*/
+  }
+
+  /*
+    Containers
+  */
+  #desc {
+    width:100%;
+    margin-top:61px; /*height of header*/
+    padding:0 20%;
+    text-align:center;
+    position: absolute;
+      z-index: 2;
+  }
+  #desc h1 {
+    font-size: 6em;
+      text-transform: uppercase;
+      line-height: 1;
+      margin-top:2em;
+      margin-bottom:0;
+      text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
+  }
+  #desc h1 .settling {
+    font-size:1.25em;
+      letter-spacing: .03em;
+  }
+  #desc h1 .for {
+    display:block;
+      text-transform: lowercase;
+      font-weight:300;
+    font-size:.5em;
+  }
+  /*#desc h1 .redtext { 
+    color:#bd261d;
+  }*/
+  #desc h1 .too {
+    font-size:1.25em;
+  }
+  #desc h1 .much {
+    font-size:1.25em;
+  }
+
+  #desc h2 {
+    font-weight:300;
+      line-height: 1;
+      font-size:2.25em;
+  }
+
+  .block {
+    width:100%;
+    text-align:center;
+    z-index: 2;
+    position:absolute;
+  }
+
+  .block h3 {
+    font-size: 4em;
+      line-height: 1;
+      margin-top:2em;
+      margin-bottom:0;
+      padding:0 20%;
+      text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
+  }
+  section.slide {
+    width:100%;
+    min-height:100vh;
+    max-height:100vh;
+    position:relative;
+  }
+  section.slide .fixed {
+    width:100%;
+    height:100vh; 
+    position: absolute;
+    top: 0;
+  }
+  section#slide-intro .img {
+    background-image: url("../images/112414_FergusonReaction-2.jpg");
+    background-size: cover;
+    background-position: center center;
+  }
+  section#slide-1 {
+    //background-image: url("../images/IMG_9158.jpg");
+    background-size: cover;
+    background-position: center center;
+  }
+  section#slide-2 .img{
+    background-image: url("../images/IMG_9158.jpg");
+    background-size: cover;
+    background-position: center center;
+  }
+  section#slide-3 .block{
+
+  }
+  section#slide-3 .img {
+    background-image: url("../images/jg_closures_protest_15.jpg");
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    width: 100%;
+    position:absolute;
+    opacity:0;
+  }
+  section#slide-4 {
+    background-image: url("../images/112414_EricGarnerProtestDay2-50.jpg");
+    background-size: cover;
+    background-position: center center;
+    height:100vh;
+  }
+  section#slide-5 {
+    background-image: url("../images/112414_FergusonReaction-2.jpg");
+    background-size: cover;
+    background-position: center center;
+    height:100vh;
+  }
+  section#slide-6 {
+    background-image: url("../images/jg_closures_protest_15.jpg");
+    background-size: cover;
+    background-position: center center;
+    height:100vh;
+  }
+  .overlay {
+    background-color:#000;
+    width:100%;
+    height:100vh; 
+      position: absolute;
+      bottom: 0;
+      /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,1+100 */
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+
+  }
+
+  /*
+    Elements
+  */
+  .spacer {
+    text-align: center;
+    min-height: 100px;
+  }
+  .spacer.s0 {
+    min-height: 1px;
+  }
+  .spacer.s1 {
+    min-height: 100px;
+  }
+  .spacer.s2 {
+    min-height: 200px;
+  }
+  .spacer.s3 {
+    min-height: 300px;
+  }
+  .spacer.s4 {
+    min-height: 400px;
+  }
+  .spacer.s5 {
+    min-height: 500px;
+  }
+  .spacer.s6 {
+    min-height: 600px;
+  }
+  .spacer.s7 {
+    min-height: 700px;
+  }
+  .spacer.s8 {
+    min-height: 800px;
+  }
+  .spacer.s9 {
+    min-height: 900px;
+  }
+  .spacer.s10 {
+    min-height: 1000px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  #home .block h3 {
+    font-size:2em;
+    margin-top:2em;
+  }
+}
