--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,7 +431,7 @@ Results
   top: 0;
 }
 #home section#slide-intro .img {
-  background-image: url("../images/112414_FergusonReaction-2.jpg");
+  background-image: url("../images/01-112414_FergusonReaction-2.jpg");
   background-size: cover;
   background-position: center center;
 }
@@ -440,12 +440,12 @@ Results
   background-position: center center;
 }
 #home section#slide-2 .img {
-  background-image: url("../images/IMG_9158.jpg");
+  background-image: url("../images/02-IMG_9158.jpg");
   background-size: cover;
   background-position: center center;
 }
 #home section#slide-3 .img {
-  background-image: url("../images/jg_closures_protest_15.jpg");
+  background-image: url("../images/02-jg_closures_protest_15.jpg");
   background-size: cover;
   background-position: center center;
   height: 100vh;
@@ -454,19 +454,19 @@ Results
   opacity: 0;
 }
 #home section#slide-4 {
-  background-image: url("../images/112414_EricGarnerProtestDay2-50.jpg");
+  background-image: url("../images/02-112414_EricGarnerProtestDay2-50.jpg");
   background-size: cover;
   background-position: center center;
   height: 100vh;
 }
 #home section#slide-5 {
-  background-image: url("../images/112414_FergusonReaction-2.jpg");
+  background-image: url("../images/06-LE0A1948.jpg");
   background-size: cover;
   background-position: center center;
   height: 100vh;
 }
 #home section#slide-6 {
-  background-image: url("../images/jg_closures_protest_15.jpg");
+  background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");
   background-size: cover;
   background-position: center center;
   height: 100vh;
