--- a/less/style.less
+++ b/less/style.less
@@ -483,7 +483,7 @@ Results
     top: 0;
   }
   section#slide-intro .img {
-    background-image: url("../images/112414_FergusonReaction-2.jpg");
+    background-image: url("../images/01-112414_FergusonReaction-2.jpg");
     background-size: cover;
     background-position: center center;
   }
@@ -493,7 +493,7 @@ Results
     background-position: center center;
   }
   section#slide-2 .img{
-    background-image: url("../images/IMG_9158.jpg");
+    background-image: url("../images/02-IMG_9158.jpg");
     background-size: cover;
     background-position: center center;
   }
@@ -501,7 +501,7 @@ Results
 
   }
   section#slide-3 .img {
-    background-image: url("../images/jg_closures_protest_15.jpg");
+    background-image: url("../images/02-jg_closures_protest_15.jpg");
     background-size: cover;
     background-position: center center;
     height: 100vh;
@@ -510,19 +510,19 @@ Results
     opacity:0;
   }
   section#slide-4 {
-    background-image: url("../images/112414_EricGarnerProtestDay2-50.jpg");
+    background-image: url("../images/02-112414_EricGarnerProtestDay2-50.jpg");
     background-size: cover;
     background-position: center center;
     height:100vh;
   }
   section#slide-5 {
-    background-image: url("../images/112414_FergusonReaction-2.jpg");
+    background-image: url("../images/06-LE0A1948.jpg");
     background-size: cover;
     background-position: center center;
     height:100vh;
   }
   section#slide-6 {
-    background-image: url("../images/jg_closures_protest_15.jpg");
+    background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");
     background-size: cover;
     background-position: center center;
     height:100vh;
