modifications to officer search view and workflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,10 @@ Form Elements
 /* ==========================================================================
 Results
 ========================================================================== */
+.case-list,
+.officer-list {
+  display: none;
+}
 .case {
   border: 1px solid #eaeaea;
   padding: 16px;
