--- a/less/style.less
+++ b/less/style.less
@@ -243,6 +243,11 @@ Form Elements
 /* ==========================================================================
 Results
 ========================================================================== */
+.case-list,
+.officer-list {
+  display: none;
+}
+
 .case {
   border:1px solid lighten(@cr-light,25%);
   padding:16px;
