more work on officer search

--- a/templates/officer.html
+++ b/templates/officer.html
@@ -1,5 +1,7 @@
 {% extends "templates/_base.html" %}
 
 {% block content %}
-<h1>Officer</h1>
+<div class="container">
+  {% include 'templates/_officer.html' %}
+</div>
 {% endblock content %}
