--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,9 @@ body.officers .case-tab {
 /* ==========================================================================
 Filters
 ========================================================================== */
+.search h2 {
+  margin-bottom: 1em;
+}
 ul.tab-selector {
   padding: 0;
   margin-bottom: 0;
@@ -113,18 +116,106 @@ ul.tab-selector li a:hover {
   background-color: #eaeaea;
   border: 1px solid #d0d0d0;
   border-top: none;
-  padding: 8px 0 8px 8px;
   margin-bottom: 2em;
+}
+.tab-containers:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.tab-containers #tag-toggle {
+  background-color: #c8c8c8;
+  padding: 4px 16px;
+  font-size: .8em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.tab-containers #tag-toggle:hover {
+  cursor: pointer;
+  background-color: #cdcdcd;
+}
+.tab-containers #tag-toggle.expanded span:after {
+  content: "Hide tags";
+}
+.tab-containers #tag-toggle span:after {
+  content: "Show tags";
+}
+.tab-containers #tag-group {
+  display: none;
+  background-color: #ffffff;
 }
 .tab-containers .form-group {
   display: inline-block;
-  width: 24%;
-  padding: 8px 2% 0 8px;
+  vertical-align: top;
+  width: 32%;
+  padding: 16px;
+  margin-bottom: 10px;
+}
+.tab-containers .form-group.tags {
+  width: 48%;
+}
+.tab-containers .form-group.tags label:not(.option) {
+  margin-top: .75em;
 }
 .tab-containers .form-group label {
   text-transform: uppercase;
   font-size: .8em;
   display: block;
+}
+.tab-containers .form-group label.option {
+  display: inline-block;
+  text-transform: lowercase;
+  font-weight: normal;
+  padding: 4px 6px;
+  background-color: #eaeaea;
+  border: 1px solid #c8c8c8;
+  border-radius: 5px;
+  line-height: 1;
+  font-size: 1em;
+}
+.tab-containers .form-group label.option:hover {
+  cursor: pointer;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f5f5f5+100 */
+  background: #ffffff;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #ffffff 0%, #f5f5f5 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #ffffff 0%, #f5f5f5 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #ffffff 0%, #f5f5f5 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f5f5f5', GradientType=0);
+  /* IE6-9 */
+}
+.tab-containers .form-group label.option i {
+  opacity: .7;
+  font-size: .8em;
+}
+.tab-containers .form-group input[type=checkbox] {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+.tab-containers .form-group input[type=checkbox]:checked + .option {
+  background-color: #3d9999;
+  color: #ffffff;
+  border: 1px solid #019999;
+}
+.tab-containers .form-group input[type=checkbox]:checked + .option:hover {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#44aaaa+0,018087+100 */
+  background: #44aaaa;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #44aaaa 0%, #018087 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #44aaaa 0%, #018087 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #44aaaa 0%, #018087 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#44aaaa', endColorstr='#018087', GradientType=0);
+  /* IE6-9 */
 }
 /* ==========================================================================
 Form Elements
@@ -212,6 +303,15 @@ Results
 .case h3 {
   font-size: 1em;
   text-transform: uppercase;
+}
+.case span.officer {
+  display: inline-block;
+}
+.case span.officer:after {
+  content: ', ';
+}
+.case span.officer:last-of-type:after {
+  content: '';
 }
 .case-details {
   list-style-type: none;
@@ -438,11 +538,19 @@ Results
 #home section#slide-1 {
   background-size: cover;
   background-position: center center;
+  opacity: 0;
+}
+#home section#slide-2 {
+  opacity: 0;
 }
 #home section#slide-2 .img {
   background-image: url("../images/02-IMG_9158.jpg");
   background-size: cover;
   background-position: center center;
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  opacity: 0;
 }
 #home section#slide-3 .img {
   background-image: url("../images/02-jg_closures_protest_15.jpg");
